syntax = "proto3";

// 定义包名，用于区分不同服务的命名空间
package project.service.v1;

// 指定Go语言生成代码的包路径
option go_package = "project-project/pkg/service/project.service.v1";

// IndexMessage 是一个空消息体，用于 Index 方法的请求参数
message IndexMessage {}

// MenuMessage 定义了菜单项的数据结构，包含菜单的基本信息和子菜单
message MenuMessage {
  int64 id = 1;           // 菜单项的唯一标识符
  int64 pid = 2;          // 父菜单项的ID，用于构建树形结构
  string title = 3;       // 菜单标题
  string icon = 4;        // 菜单图标
  string url = 5;         // 菜单链接地址
  string filePath = 6;    // 文件路径（可选）
  string params = 7;      // 菜单附加参数
  string node = 8;        // 节点标识符
  int32 sort = 9;         // 排序权重
  int32 status = 10;      // 菜单状态（启用/禁用）
  int64 createBy = 11;    // 创建者ID
  int32 isInner = 12;     // 是否为内部菜单
  string values = 13;     // 菜单值（可选）
  int32 showSlider = 14;  // 是否显示侧边栏
  repeated MenuMessage children = 15; // 子菜单列表，支持嵌套结构
}

// IndexResponse 定义了 Index 方法的响应数据结构
message IndexResponse {
  repeated MenuMessage menus = 1; // 菜单列表，包含所有顶级菜单及其子菜单
}

// ProjectMessage 定义了项目的基本信息
message ProjectMessage {
  int64 Id = 1;                  // 项目唯一标识符
  string Cover = 2;              // 项目封面图片URL
  string Name = 3;               // 项目名称
  string Description = 4;        // 项目描述
  int32 AccessControlType = 5;   // 访问控制类型
  string WhiteList = 6;          // 白名单用户或角色
  int32 Order = 7;               // 项目排序权重
  int32 Deleted = 8;             // 是否已删除
  string TemplateCode = 9;       // 项目模板代码
  double Schedule = 10;          // 项目进度百分比
  string CreateTime = 11;        // 项目创建时间
  int64 OrganizationCode = 12;   // 所属组织代码
  string DeletedTime = 13;       // 删除时间
  int32 Private = 14;            // 是否为私有项目
  string Prefix = 15;            // 项目前缀
  int32 OpenPrefix = 16;         // 是否开放前缀
  int32 Archive = 17;            // 是否已归档
  int64 ArchiveTime = 18;        // 归档时间
  int32 OpenBeginTime = 19;      // 是否开放开始时间
  int32 OpenTaskPrivate = 20;    // 是否开放任务隐私设置
  string TaskBoardTheme = 21;   // 任务看板主题
  int64 BeginTime = 22;          // 项目开始时间
  int64 EndTime = 23;            // 项目结束时间
  int32 AutoUpdateSchedule = 24;// 是否自动更新进度
  int64 ProjectCode = 25;        // 项目代码
  int64 MemberCode = 26;         // 成员代码
  int64 JoinTime = 27;           // 成员加入时间
  int64 IsOwner = 28;            // 是否为项目拥有者
  string Authorize = 29;         // 授权信息
  string Code = 30;              // 项目编码
}

// ProjectRpcMessage 定义了 FindProjectByMemId 方法的请求参数
message ProjectRpcMessage {
  int64 memberId = 1;  // 成员ID，用于查询该成员参与的项目
  int64 page = 2;      // 分页页码
  int64 pageSize = 3;  // 每页记录数
}

// MyProjectResponse 定义了 FindProjectByMemId 方法的响应数据结构
message MyProjectResponse {
  repeated ProjectMessage pm = 1; // 项目列表，包含成员参与的所有项目
  int64 total = 2;                // 总项目数
}

// ProjectService 定义了项目相关的服务接口
service ProjectService {
  /**
   * Index 方法用于获取系统菜单列表。
   *
   * @param IndexMessage 请求参数为空。
   * @return IndexResponse 返回包含菜单列表的响应。
   */
  rpc Index(IndexMessage) returns (IndexResponse) {}

  /**
   * FindProjectByMemId 方法用于根据成员ID查询其参与的项目列表。
   *
   * @param ProjectRpcMessage 请求参数包含成员ID、分页页码和每页记录数。
   * @return MyProjectResponse 返回包含项目列表和总项目数的响应。
   */
  rpc FindProjectByMemId(ProjectRpcMessage) returns (MyProjectResponse) {}
}
